# Aviation-Delay-Prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MEMORY.md  README.md  README.mdgit  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README_DEVOPS.md
src/api/: app.py
src/models/: 02_train_model.py  lgbm_flight_delay.pkl
src/scripts/: clean_transform.py  download_data.py  load_to_postgres.py  optimize_db.py  retrain_model.py  run_quality_report.py
src/utils/: logging_config.py  pipeline_common.py
tests/: test_clean_transform.py  test_data.py  test_data_quality_report.py  test_download_data.py  test_load_to_postgres.py  test_model.py  test_optimize_db.py  test_run_quality_report.py  test_simple.py  test_train_model.py
utils/: __init__.py  database.py  logging_config.py
