[project]
name = "Aviation Delay Prediction"
version = "0.1.0"
description = "ETL pipeline and ML model for flight delay prediction"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    "pandas>=2.0",
    "polars>=1.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.2",
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
experimental-string-processing = false

[tool.isort]
profile = "black"
combine-as-imports = true
multi-line-output = 3
line-endings = "auto"

[tool.ruff]
target-version = "py310"
exit-non-zero-on-find = true
line-length = 88
ignore = []
select = ["E", "W", "F", "I", "Q"]
# Optional auto-fix on commit
[tool.ruff.lint]
# Enable all default rules
extend-select = ["ANN", "B001", "B008", "C4", "CAN", "CAR", "CES", "CHM", "COP", "C90", "CRE", "CYB", "D", "E", "ERA", "E501", "E703", "F401", "F601", "F701", "F811", "F821", "F822", "F823", "F841", "F901", "F902", "F903", "F904", "F905", "F906", "F907", "F908", "F909", "F909", "F909", "F909", "F909", "F909"]
# Excluding rules can be added here if needed

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"